GitHub workflows: finish the build job
Add all necerry steps to the `build` job of our GitHub workflow.
Addditionally, add instructions in the README.

Signed-off-by: Martin Vrachev <mvrachev@vmware.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,3 +11,27 @@ jobs:
     steps:
       - name: Initial echo
         run: echo "Initialize" # command that will be run when executing this step.
+
+      # NOTE: We are using particular commits of all actions to achieve reproducibility.
+
+      # The runner doesn't have your code if you don't checkout
+      - name: Checkout
+        uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
+
+      - name: Set up Python
+        uses: actions/setup-python@c4e89fac7e8767b327bbad6cb4d859eda999cf08
+        with:
+        # NOTE: Use the same python version here as the one you have chosen locally
+        # in your virtual environment. This is important for reproducibility.
+          python-version: '3.9'
+
+      - name: Install build dependency
+        run: python3 -m pip install build
+
+      - name: Build
+        run: python3 -m build
+
+      # We are listing sha256 sums of the build files to make sure that what was
+      # built on GitHub matches what was built locally.
+      - name: List shas
+        run: sha256sum dist/*
