Make tag name as a trigger and add instructions
Change the workflow trigger from a manual click of a button, to
the automatic trigger that will be activated when a tag with a name
starting with a "v" published on GitHub.

Signed-off-by: Martin Vrachev <mvrachev@vmware.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,11 @@ name: GitHub release workflow example
 
 # "on" specifies the workflow trigger.
 on:
-  # "workflow_dispatch" means that a manual trigger is required to run this workflow
-  workflow_dispatch:
+  # Automatic trigger which will be activated on a pushed commit which has a tag
+  # attached to it with a name starting with "v".
+  push:
+    tags:
+      - v*
 
 jobs:
   build: # name of that particular step in the job, it could be a custom string
